private/powerset_matrix/src/snapshots/powerset_matrix__tests__powerset_impl@case_02.snap
---
source: private/powerset_matrix/src/lib.rs
expression: powerset
---
Ok(
    [
        [
            "a",
            "b",
        ],
        [
            "a",
            "c",
        ],
        [
            "b",
            "c",
        ],
        [
            "a",
            "b",
            "c",
        ],
    ],
)
