private/powerset_matrix/src/snapshots/powerset_matrix__tests__powerset_impl@case_5.snap
---
source: private/powerset_matrix/src/lib.rs
expression: powerset
---
Ok(
    [
        [
            "a",
            "b",
        ],
        [
            "a",
            "c",
        ],
        [
            "a",
            "d",
        ],
        [
            "a",
            "e",
        ],
        [
            "a",
            "f",
        ],
        [
            "b",
            "c",
        ],
        [
            "b",
            "d",
        ],
        [
            "b",
            "e",
        ],
        [
            "b",
            "f",
        ],
        [
            "c",
            "d",
        ],
        [
            "c",
            "e",
        ],
        [
            "c",
            "f",
        ],
        [
            "d",
            "e",
        ],
        [
            "d",
            "f",
        ],
        [
            "e",
            "f",
        ],
        [
            "a",
            "b",
            "c",
        ],
    ],
)
